[project]
name = "RealEstateproject1"
version = "0.0.1"
description = "An automated system to analyze eviction"
authors = [
    {name = "Chhandak Roy", email = "roychhandak2001@gmail.com"}  #add your over here
]

# python version requirement
requires-python= ">=3.10"

# dependencies goes here

# build system
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"